--- a/index.html
+++ b/index.html
@@ -21,10 +21,16 @@
       <p class="middle">east </p>
       <p class="bottom">collegiate bowl</p>
     </div>
+    <menu class="c">
+      <li class="{{ navItem[0] }}"
+          ng-repeat="navItem in soundsNav" ng-click="$parent.activeSounds = navItem[0]">
+        {{ navItem[1] }}
+      </li>
+    </menu>
   </h1>
 
   <div class="sounds">
-    <a class="sound" ng-repeat="sound in sounds" ng-click="play($event)">
+    <a class="sound" ng-repeat="sound in sounds[activeSounds]" ng-click="play($event)">
       <span>{{ sound[0] }}</span>
       <audio src="{{ 'media/snd/wav/' + sound[1] + '.wav' }}" preload="auto"></audio>
     </a>
